--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "build": "webpack --config webpack-prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nomie","journaling","tracking"],
+  "keywords": [
+    "nomie",
+    "journaling",
+    "tracking"
+  ],
   "author": "Happy Data <support@happydata.org>",
   "license": "MIT",
   "devDependencies": {
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "markdown-it": "^13.0.1",
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
