--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
+    "dayjs": "^1.11.5",
     "html-webpack-plugin": "^5.5.0",
     "markdown-it": "^13.0.1",
     "postcss": "^8.4.4",
@@ -29,6 +30,6 @@
     "typescript": "^4.5.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^4.10.0"
   }
 }
