--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack-prod.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:nui": "postcss src/nui/nui.css -o src/styles/nui@v1.css",
-    "dev:nui": "postcss src/nui/nui.css -o src/styles/nui@v1.css -w"
+    "dev:nui": "postcss src/nui/nui.css -o src/styles/nui@v1.css -w",
+    "publish2bin": "node build-tools/publish-2bin.js"
   },
   "keywords": [
     "nomie",
